--- a/public/homepage/list-left/index.html
+++ b/public/homepage/list-left/index.html
@@ -500,7 +500,7 @@ Life is a series of natural and spontaneous …</span>
       </a>
       <div class="media-body">
         <h5 class="h6 mb-0"><a href="https://www.tlst.cc/post/system-approach-to-dp/">动态规划的系统性方法</a></h5>
-        <small>March 24, 2022</small>
+        <small>March 25, 2022</small>
       </div>
     </li>
   
@@ -588,7 +588,7 @@ Life is a series of natural and spontaneous …</span>
             <ul class="list-inline post-meta mb-2">
               <li class="list-inline-item"><i class="fas fa-user mr-2"></i><a
                   href="/author/%E9%83%81%E9%87%91%E9%A6%99%E5%95%8A/">郁金香啊</a></li>
-              <li class="list-inline-item">日期 : March 24, 2022</li>
+              <li class="list-inline-item">日期 : March 25, 2022</li>
               <li class="list-inline-item">分类 :
                 <a
                   href="/categories/tutorials" class="ml-1">Tutorials </a>
@@ -605,7 +605,7 @@ Life is a series of natural and spontaneous …</span>
             </ul>
             <p>
               
-              其实很早就想要写一篇动态规划相关的文章，把这个非常棒的算法或者说是一种问题思考方式推荐给更多的人，不 论你是程序员还是其他任何职业的从业人员， 了解动态 规划都会对你或者说你看待一个问题的方式或多或少 …
+              其实很早就想要写一篇动态规划相关的文章，把这个非常棒的算法或者说是一种问题思考方式推荐给更多的人，不论你是程序员还是其他任何职业的从业人员，了解动态规划都会对你或者说你看待一个问题的方式或多或少产生一 …
               
             </p>
             <a href="/post/system-approach-to-dp/" class="btn btn-outline-primary">继续阅读</a>
