--- a/public/homepage/list-left/index.html
+++ b/public/homepage/list-left/index.html
@@ -633,7 +633,7 @@ Life is a series of natural and spontaneous …</span>
             </ul>
             <p>
               
-              在我们学习操作系统时，有一个章节会讲数据存储相关的的内容，那个经典的金字塔模型。哈哈，又一个Trade off 的完美诠释。这个金字塔模型中指出，通常我们可以很容易的获得一些存储设备，其数据容量大，成 …
+              在我们学习操作系统时，有一个章节会讲数据存储相关的的内容，那个经典的金字塔模型。哈哈，又一个Trade off 的完美诠释。这个金字塔模型中指出，通常我们可以很容易地获得一些存储设备，其数据容量大，成 …
               
             </p>
             <a href="/post/java-concurrent-programming-02/" class="btn btn-outline-primary">继续阅读</a>
